--- a/xFunc/Resources/Resource.resx
+++ b/xFunc/Resources/Resource.resx
@@ -423,4 +423,13 @@
   <data name="SquareRootToolTip" xml:space="preserve">
     <value>Square root of "x". Example: sqrt(9)</value>
   </data>
+  <data name="LgToolTip" xml:space="preserve">
+    <value>Logarithm to base 10 of "x". Example: lg(3)</value>
+  </data>
+  <data name="LnToolTip" xml:space="preserve">
+    <value>Natural logarithm of "x". Example: ln(10)</value>
+  </data>
+  <data name="LogToolTip" xml:space="preserve">
+    <value>Logarigthm to base "y" of "x". Example: log(2, 4)</value>
+  </data>
 </root>
