--- a/xFunc/Resources/Resource.uk.resx
+++ b/xFunc/Resources/Resource.uk.resx
@@ -423,4 +423,13 @@
   <data name="SquareRootToolTip" xml:space="preserve">
     <value>Квадратний корінь від "x". Приклад: sqrt(9)</value>
   </data>
+  <data name="LgToolTip" xml:space="preserve">
+    <value>Логарифм за основою 10 числа "x". Приклад: lg(3)</value>
+  </data>
+  <data name="LnToolTip" xml:space="preserve">
+    <value>Натуральный логарифм числа "x". Приклад: ln(10)</value>
+  </data>
+  <data name="LogToolTip" xml:space="preserve">
+    <value>Логарифм за основою "y" чиста "x". Приклад: log(2, 4)</value>
+  </data>
 </root>
