--- a/xFunc/Resources/Resource.resx
+++ b/xFunc/Resources/Resource.resx
@@ -468,4 +468,25 @@
   <data name="TanhToolTip" xml:space="preserve">
     <value>Hyperbolic tangent of "x". Example: tanh(90) or th(90)</value>
   </data>
+  <data name="AndToolTip" xml:space="preserve">
+    <value>Bitwise AND operation. This operation rounds a rational number. Example: x and y, x &amp; y</value>
+  </data>
+  <data name="DefToolTip" xml:space="preserve">
+    <value>Assigns the value to specified variable or creates an user-function. Example: x := 1, f(x) := sin(x)</value>
+  </data>
+  <data name="NotToolTip" xml:space="preserve">
+    <value>Bitwise NOT operation. This operation rounds a rational number. Example: not(3)</value>
+  </data>
+  <data name="OrToolTip" xml:space="preserve">
+    <value>Bitwise OR operation. This operation rounds a rational number. Example: x or y, x | y</value>
+  </data>
+  <data name="SimplifyToolTip" xml:space="preserve">
+    <value>Simplifies the specified expression. Example: simplify(arcsin(sin(x)))</value>
+  </data>
+  <data name="UndefToolTip" xml:space="preserve">
+    <value>Removes the specified variable or user-function. Example: undef(x)</value>
+  </data>
+  <data name="XOrToolTip" xml:space="preserve">
+    <value>Bitwise XOR operation. This operation rounds a rational number. Example: x xor y</value>
+  </data>
 </root>
