--- a/xFunc/Resources/Resource.uk.resx
+++ b/xFunc/Resources/Resource.uk.resx
@@ -570,4 +570,7 @@
   <data name="SettingsWindowPos" xml:space="preserve">
     <value>Запам'ятовувати стан вікна і його позицію.</value>
   </data>
+  <data name="SettingsReset" xml:space="preserve">
+    <value>Скинути</value>
+  </data>
 </root>
