Added groups to the Variable window.

--- a/xFunc.Maths/Resources/Resource.resx
+++ b/xFunc.Maths/Resources/Resource.resx
@@ -123,6 +123,9 @@
   <data name="AssignVariable" xml:space="preserve">
     <value>The value '{1}' was assigned to the variable '{0}'.</value>
   </data>
+  <data name="ConstError" xml:space="preserve">
+    <value>You can't add constants.</value>
+  </data>
   <data name="ErrorWhileParsingTree" xml:space="preserve">
     <value>An error occurred while parsing the tree.</value>
   </data>
