--- a/xFunc/Resources/Resource.resx
+++ b/xFunc/Resources/Resource.resx
@@ -372,4 +372,13 @@
   <data name="VarScreenTitTitle" xml:space="preserve">
     <value>Variables</value>
   </data>
+  <data name="MathParameterType_Constant" xml:space="preserve">
+    <value>Constants</value>
+  </data>
+  <data name="MathParameterType_Normal" xml:space="preserve">
+    <value>Normal</value>
+  </data>
+  <data name="MathParameterType_ReadOnly" xml:space="preserve">
+    <value>ReadOnly</value>
+  </data>
 </root>
