--- a/xFunc.Maths/Resources/Resource.ru.resx
+++ b/xFunc.Maths/Resources/Resource.ru.resx
@@ -123,6 +123,9 @@
   <data name="AssignVariable" xml:space="preserve">
     <value>Переменной '{0}' присвоено '{1}' значение.</value>
   </data>
+  <data name="ConstError" xml:space="preserve">
+    <value>Вы не можете добавлять константы.</value>
+  </data>
   <data name="ErrorWhileParsingTree" xml:space="preserve">
     <value>При построении дерева произошла ошибка.</value>
   </data>
