--- a/xFunc.Maths/Resources/Resource.uk.resx
+++ b/xFunc.Maths/Resources/Resource.uk.resx
@@ -123,6 +123,9 @@
   <data name="AssignVariable" xml:space="preserve">
     <value>Змінній '{0}' присвоєно '{1}' значення.</value>
   </data>
+  <data name="ConstError" xml:space="preserve">
+    <value>Ви не можете додавати константи.</value>
+  </data>
   <data name="ErrorWhileParsingTree" xml:space="preserve">
     <value>При побудові дерева сталася помилка.</value>
   </data>
