--- a/xFunc/Resources/Resource.uk.resx
+++ b/xFunc/Resources/Resource.uk.resx
@@ -612,4 +612,19 @@
   <data name="AddVarValue" xml:space="preserve">
     <value>_Значення:</value>
   </data>
+  <data name="AddFuncCancel" xml:space="preserve">
+    <value>Відміна</value>
+  </data>
+  <data name="AddFuncFunc" xml:space="preserve">
+    <value>_Функція:</value>
+  </data>
+  <data name="AddFuncName" xml:space="preserve">
+    <value>_Им'я:</value>
+  </data>
+  <data name="AddFuncOk" xml:space="preserve">
+    <value>ОК</value>
+  </data>
+  <data name="AddFuncTitle" xml:space="preserve">
+    <value>Додати функцію</value>
+  </data>
 </root>
