--- a/xFunc/Resources/Resource.uk.resx
+++ b/xFunc/Resources/Resource.uk.resx
@@ -627,4 +627,7 @@
   <data name="AddFuncTitle" xml:space="preserve">
     <value>Додати функцію</value>
   </data>
+  <data name="ErrorHeader" xml:space="preserve">
+    <value>Помилка</value>
+  </data>
 </root>
